# Laboratories-4

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rec.qrc  secondwindow.cpp  secondwindow.h  secondwindow.ui  test.cpp  thirdwindow.cpp  thirdwindow.h  thirdwindow.ui  untitled1.pro
Before/: funcBefore.cpp
Boost_Tests/: CMakeLists.txt  Tests.cpp
Boost_tests/: CMakeLists.txt  MathTests.cpp
First Lab/: CMakeLists.txt
First Lab/Boost_tests/: MathTests.cpp
First Lab/Math_lib/: CMakeLists.txt  MathLib.cpp  MathLib.h
Lab3/: CMakeLists.txt  main.cpp  sort.cpp  sort.h
Lab3/Boost_tests/: CMakeLists.txt  tests.cpp
Lab3/Lab3a/: main.cpp
Lab3/Lab3a/Boost_tests/: CMakeLists.txt  tests.cpp
Lab3/Lab3a/sort/: sort.h
Lab3/Lab3b/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab3/sort/: CMakeLists.txt  sort.cpp  sort.h
Math_lib/: MathLib.cpp  MathLib.h
Second lab/: List.cpp  List.h  Patient.cpp  Patient.h  l2.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  queue.cpp  queue.h
build-untitled1-Desktop-Release/: Makefile  moc_mainwindow.cpp  moc_secondwindow.cpp  moc_thirdwindow.cpp  qrc_rec.cpp  ui_mainwindow.h  ui_secondwindow.h  ui_thirdwindow.h  untitled1
